# hs-code

./: .gitignore  readme.txt
100HFTPrograms/: Advanced C++ HFT Problems (Full 100).md
DesignPatterns/: builder.cpp  dcl.cpp
DynamicPrograms/: editdistance.cpp  mine.cpp
Multithreading/: async.cpp  benchmark.cpp  cew.cpp  hierarchialmutex.cpp  measure.cpp  packagedtask.cpp  semaphore.cpp  sfinae.cpp  shared_future.cpp  simpletp.cpp  spinlock.cpp  stoptoken.cpp  temp.cpp  tempmove.cpp  thread_guard.cpp  threadmethod.cpp  threadraii.cpp  tpool_with_ft.cpp
TMP/: overloadedpattern.cpp  printtuple.cpp  remove_duplicates.cpp  stringstack.cpp
algorithms/: dijkstra.cpp  most_frequent_n_numbers.cpp  queens.cpp  regex.cpp  top_3_stocks.cpp
benchmarking/: gtest_sample.cpp  scoped_timer.cpp
c++/plugin/: CMakeLists.txt  Makefile  cmake_install.cmake  factory.hpp  iplugin.hpp  main.cpp  plugin_manager.cpp  plugin_manager.hpp  plugins.hpp  registrar.hpp
c++20-23/: fileread.cpp
chatclientandserver/: readme.txt  sockserver.h
concurrency/: a.out  packaged_task.cpp  producerconsumer2.cpp  scspQ.cpp  temp.cpp
cpp-concurrency-in-action/: readme.txt
cpp-sprint/: complex.cpp  crtp.cpp  diamond-problem.cpp  func.cpp  input_parse.cpp  kv_db.cpp  mystring.cpp  rtti.cpp  singleton.cpp  top-stocks.cpp
design_patterns/: command.cpp  observer.cpp  pimpl.h
distributed-systems/kafka/equities_src/: CMakeLists.txt
distributed-systems/kafka/equities_src/src/: kafka_consumer.h  kafka_producer.h  md_ingest.cpp  price_engine.cpp
distributed-systems/kafka/equities_src/tools/: tick_generator.py
distributed-systems/protobuf/: CMakeLists.txt  README.md  build.sh  consumer.cpp  message.proto  producer.cpp
dynamic-programming/: coin.cpp  lcs.cpp  paths-in-matrix.cpp
funstuff/: generateprime.cpp  sudoku.cpp  sudoku2.txt
general/: kv_db.cpp  lru.cpp  parallelfind.cpp  split.cpp  stl_with_char.cpp  trie.cpp  variant.cpp
gtest/: build.sh  test_bm.cpp  test_example
huge-file/: read-json.cpp
interview-programs/: stockprofit.cpp
leetcode/: best_time_to_buy_and_sell_stocks.cpp  hindex.cpp  jump.cpp  leetcode125.cpp  leetcode14.cpp  leetcode141.cpp  leetcode169.cpp  leetcode206.cpp  leetcode232.cpp  leetcode283.cpp  leetcode383.cpp  leetcode56.cpp  leetcode70.cpp  leetcode733.cpp  leetcode973.cpp  leetcode_1.cpp  leetcode_104.cpp  leetcode_111.cpp  leetcode_112.cpp  leetcode_141.cpp  leetcode_169.cpp  leetcode_203.cpp  leetcode_206.cpp  leetcode_21.cpp  leetcode_217.py  leetcode_226.cpp  leetcode_252.cpp  leetcode_257.cpp  leetcode_283.cpp  leetcode_338.cpp  leetcode_392.cpp  leetcode_543.cpp  leetcode_572.cpp  leetcode_637.cpp  leetcode_744.cpp  leetcode_844.cpp  leetcode_876.cpp  leetcode_977.cpp  majorityelement.cpp  merge.cpp  (+8 more)
low_latency_order_matcher/: marketdata_simulator.py  order_book_fix.py  orders_json.py
low_latency_order_matching_engine/: engine_simulator.py  exchange_simulator.py  md.cpp  order_book.py  order_book_fix.py  orders.py  orders_json.py
memcached/: a.out
multithreading/: a.out  (+2 more)
networking/websocket/: CMakeLists.txt  client.cpp  readme.md  server.cpp
shared_mem/: CMakeLists.txt  consumer.cpp  consumer_sem.cpp  producer.cpp  producer_sem.cpp  reader.cpp  shared_memory.h  writer.cpp
(+543 files in other folders)
